--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.3",
+    "@apollo/gateway": "^2.1.1",
     "@apollo/subgraph": "^2.1.1",
     "@aws-sdk/client-sqs": "3.41.0",
     "@aws-sdk/credential-provider-node": "3.49.0",
@@ -155,9 +156,7 @@
     "datebook": "7.0.8",
     "dd-trace": "2.5.0",
     "deepmerge": "4.2.2",
-    "document-register-element": "1.13.1",
     "downshift": "5.4.3",
-    "elastic-builder": "2.6.1",
     "entropy-string": "4.2.0",
     "escape-html": "1.0.3",
     "eslint-plugin-local-rules": "1.0.1",
@@ -190,7 +189,6 @@
     "js-base64": "2.5.2",
     "js-cookie": "2.2.1",
     "js-yaml": "4.1.0",
-    "jsbarcode": "3.11.5",
     "jsonp": "0.2.1",
     "jsonwebtoken": "8.5.1",
     "juice": "8.0.0",
@@ -208,7 +206,6 @@
     "next-auth": "3.29.10",
     "next-cookies": "2.0.3",
     "node-fetch": "2.6.7",
-    "node-gyp": "^9.1.0",
     "nodemailer": "6.7.2",
     "oidc-client-ts": "2.0.3",
     "openapi3-ts": "2.0.0",
@@ -271,7 +268,6 @@
     "swagger-ui-express": "4.3.0",
     "swr": "1.2.0",
     "testcontainers": "7.23.2",
-    "timeout-signal": "1.1.0",
     "to-querystring": "1.1.1",
     "triple-beam": "1.3.0",
     "tslib": "1.14.1",
@@ -284,7 +280,6 @@
     "xml2js": "0.4.23",
     "xstate": "4.20.0",
     "yargs": "15.4.1",
-    "yup": "0.29.0",
     "zod": "1.11.13"
   },
   "devDependencies": {
