Prettier and set fetch as global in jest for auth-admin-web

--- a/apps/air-discount-scheme/web/tsconfig.json
+++ b/apps/air-discount-scheme/web/tsconfig.json
@@ -11,9 +11,7 @@
     "incremental": true
   },
   "include": [],
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "files": [],
   "references": [
     {
