--- a/apps/financial-aid/web-osk/tsconfig.json
+++ b/apps/financial-aid/web-osk/tsconfig.json
@@ -10,9 +10,7 @@
     "incremental": true
   },
   "include": [],
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "files": [],
   "references": [
     {
