--- a/apps/reference-next-app/tsconfig.json
+++ b/apps/reference-next-app/tsconfig.json
@@ -11,9 +11,7 @@
     "incremental": true
   },
   "include": [],
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "files": [],
   "references": [
     {
