--- a/apps/skilavottord/web/tsconfig.json
+++ b/apps/skilavottord/web/tsconfig.json
@@ -10,9 +10,7 @@
     "incremental": true
   },
   "include": [],
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "files": [],
   "references": [
     {
