--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "is-url": "1.2.4",
     "isomorphic-fetch": "3.0.0",
     "isomorphic-unfetch": "3.0.0",
+    "jest-environment-jsdom": "28.1.3",
     "js-base64": "2.5.2",
     "js-cookie": "2.2.1",
     "js-yaml": "4.1.0",
@@ -274,6 +275,7 @@
     "tslib": "1.14.1",
     "unified": "9.2.0",
     "uuidv4": "6.0.8",
+    "whatwg-fetch": "^3.6.2",
     "winston": "3.7.2",
     "winston-cloudwatch": "3.1.1",
     "winston-transport": "4.5.0",
@@ -292,8 +294,8 @@
     "@babel/plugin-proposal-decorators": "7.18.2",
     "@babel/plugin-transform-runtime": "7.18.2",
     "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "7.17.12",
-    "@babel/preset-typescript": "7.17.12",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@gperdomor/nx-docker": "0.2.3",
     "@graphql-codegen/cli": "^2.12.0",
     "@graphql-codegen/fragment-matcher": "^3.3.1",
@@ -328,7 +330,7 @@
     "@storybook/source-loader": "6.5.8",
     "@storybook/theming": "6.5.8",
     "@testing-library/cypress": "8.0.3",
-    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "12.1.5",
@@ -351,14 +353,14 @@
     "@types/imap-simple": "4.2.5",
     "@types/is-url": "1.2.28",
     "@types/isomorphic-fetch": "0.0.35",
-    "@types/jest": "27.0.2",
+    "@types/jest": "28.1.3",
     "@types/js-base64": "3.0.0",
     "@types/js-cookie": "2.2.6",
     "@types/js-yaml": "4.0.3",
     "@types/lodash": "4.14.160",
     "@types/mailparser": "3.4.0",
     "@types/memoizee": "0.4.5",
-    "@types/node": "14.17.17",
+    "@types/node": "^18.7.18",
     "@types/opossum": "4.1.1",
     "@types/passport-local": "1.0.33",
     "@types/pg": "8.6.4",
@@ -401,7 +403,7 @@
     "fetch-mock": "9.10.7",
     "imap-simple": "5.1.0",
     "inspectpack": "4.7.1",
-    "jest": "27.2.3",
+    "jest": "28.1.3",
     "jest-mock-extended": "1.0.10",
     "jest-resolve": "26.6.2",
     "jest-transform-stub": "2.0.0",
@@ -418,7 +420,7 @@
     "storybook-addon-apollo-client": "4.0.11",
     "storybook-addon-designs": "6.2.1",
     "ts-dedent": "2.0.0",
-    "ts-jest": "27.0.5",
+    "ts-jest": "28.0.8",
     "ts-morph": "^16.0.0",
     "ts-node": "10.2.1",
     "type-fest": "1.1.3",
