--- a/apps/judicial-system/codegen.yml
+++ b/apps/judicial-system/codegen.yml
@@ -14,6 +14,21 @@ generates:
       withComponent: false
       avoidOptionals:
         object: true
+  ./apps/judicial-system/web-e2e/src/graphql/schema.ts:
+    schema:
+      - ./apps/judicial-system/api.graphql
+    documents:
+      - ./apps/judicial-system/web-e2e/**/*.(ts|tsx)
+    plugins:
+      - typescript
+      - typescript-operations
+      - typescript-react-apollo
+    config:
+      withHooks: true
+      withHOC: false
+      withComponent: false
+      avoidOptionals:
+        object: true
   ./apps/judicial-system/web/src/graphql/possibleTypes.json:
     schema:
       - ./apps/judicial-system/api.graphql
