--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -73,6 +73,8 @@
 /libs/application/template-api-modules/src/lib/modules/templates/driving-school-confirmation/       @island-is/juni
 /libs/application/templates/operating-license/                                                      @island-is/juni
 /libs/application/template-api-modules/src/lib/modules/templates/operating-license/                 @island-is/juni
+/libs/application/templates/driving-license-duplicate/                                              @island-is/juni
+/libs/application/template-api-modules/src/lib/modules/templates/driving-license-duplicate/         @island-is/juni
 
 /libs/clients/auth-public-api/                                                                      @island-is/aranja
 /libs/clients/middlewares/                                                                          @island-is/aranja
