--- a/apps/judicial-system/web-e2e-regression/project.json
+++ b/apps/judicial-system/web-e2e-regression/project.json
@@ -13,7 +13,5 @@
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "judicial-system-web"
-  ]
+  "implicitDependencies": ["judicial-system-web"]
 }
