Fixing builds and tests

--- a/package.json
+++ b/package.json
@@ -176,7 +176,7 @@
     "handlebars": "4.7.7",
     "hot-shots": "9.0.0",
     "http-cache-semantics": "4.1.0",
-    "http-proxy-middleware": "0.19.1",
+    "http-proxy-middleware": "^2.0.6",
     "hypher": "0.2.5",
     "identicon.js": "2.3.3",
     "intl": "1.2.5",
@@ -344,11 +344,10 @@
     "@types/cross-spawn": "6.0.2",
     "@types/crypto-js": "4.0.1",
     "@types/escape-html": "1.0.0",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.14",
     "@types/folder-hash": "3.3.0",
     "@types/graphql": "^14.5.0",
     "@types/http-cache-semantics": "4.0.1",
-    "@types/http-proxy-middleware": "0.19.3",
     "@types/identicon.js": "2.3.0",
     "@types/imap-simple": "4.2.5",
     "@types/is-url": "1.2.28",
