--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -6,7 +6,7 @@
   "generators": {},
   "targets": {
     "build": {
-      "executor": "@nrwl/node:webpack",
+      "builder": "@nrwl/node:webpack",
       "options": {
         "outputPath": "dist/apps/system-e2e",
         "main": "",
