--- a/charts/islandis/values.staging.yaml
+++ b/charts/islandis/values.staging.yaml
@@ -374,6 +374,11 @@ api:
     DRIVING_LICENSE_BOOK_XROAD_PATH: '/k8s/api/DRIVING_LICENSE_BOOK_XROAD_PATH'
     FINANCIAL_STATEMENTS_INAO_CLIENT_ID: '/k8s/api/FINANCIAL_STATEMENTS_INAO_CLIENT_ID'
     FINANCIAL_STATEMENTS_INAO_CLIENT_SECRET: '/k8s/api/FINANCIAL_STATEMENTS_INAO_CLIENT_SECRET'
+    FISKISTOFA_ACCESS_TOKEN_SERVICE_AUDIENCE: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_AUDIENCE'
+    FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_ID: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_ID'
+    FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_SECRET: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_SECRET'
+    FISKISTOFA_ACCESS_TOKEN_SERVICE_URL: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_URL'
+    FISKISTOFA_API_URL: '/k8s/api/FISKISTOFA_API_URL'
     IDENTITY_SERVER_CLIENT_SECRET: '/k8s/api/IDENTITY_SERVER_CLIENT_SECRET'
     ISLYKILL_SERVICE_BASEPATH: '/k8s/api/ISLYKILL_SERVICE_BASEPATH'
     ISLYKILL_SERVICE_PASSPHRASE: '/k8s/api/ISLYKILL_SERVICE_PASSPHRASE'
