--- a/charts/islandis/values.prod.yaml
+++ b/charts/islandis/values.prod.yaml
@@ -385,6 +385,7 @@ api:
     FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_SECRET: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_CLIENT_SECRET'
     FISKISTOFA_ACCESS_TOKEN_SERVICE_URL: '/k8s/api/FISKISTOFA_ACCESS_TOKEN_SERVICE_URL'
     FISKISTOFA_API_URL: '/k8s/api/FISKISTOFA_API_URL'
+    FIREARM_LICENSE_PASS_TEMPLATE_ID: '/k8s/api/FIREARM_LICENSE_PASS_TEMPLATE_ID'
     IDENTITY_SERVER_CLIENT_SECRET: '/k8s/api/IDENTITY_SERVER_CLIENT_SECRET'
     ISLYKILL_SERVICE_BASEPATH: '/k8s/api/ISLYKILL_SERVICE_BASEPATH'
     ISLYKILL_SERVICE_PASSPHRASE: '/k8s/api/ISLYKILL_SERVICE_PASSPHRASE'
