--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -6,23 +6,14 @@
   "generators": {},
   "targets": {
     "build": {
-      "builder": "@nrwl/node:webpack",
+      "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "outputPath": "dist/apps/system-e2e",
-        "main": "",
-        "tsConfig": "apps/system-e2e/tsconfig.json",
-        "webpackConfig": "apps/system-e2e/webpack.config.js",
-        "maxWorkers": 2,
-        "assets": []
-      },
-      "configurations": {
-        "production": {
-          "optimization": true,
-          "extractLicenses": true,
-          "inspect": false
-        }
-      },
-      "outputs": ["{options.outputPath}"]
+        "commands": [
+          "esbuild --bundle $(find apps/system-e2e -name '*.ts') --outdir=dist/apps/system-e2e --tsconfig=apps/system-e2e/tsconfig.json --platform=node --external:@playwright/test",
+          "cp apps/system-e2e/package.json dist/apps/system-e2e/"
+        ],
+        "parallel": false
+      }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
@@ -31,19 +22,15 @@
       }
     },
     "smoke": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "cypressConfig": "apps/system-e2e/cypress.config.ts",
-        "tsConfig": "apps/system-e2e/tsconfig.json",
-        "spec": "**/integration/**/smoke/*.spec.{ts,js}"
+        "command": "yarn playwright test apps/system-e2e/src/tests/*/smoke -c apps/system-e2e/src"
       }
     },
     "acceptance": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "cypressConfig": "apps/system-e2e/cypress.config.ts",
-        "tsConfig": "apps/system-e2e/tsconfig.json",
-        "spec": "**/integration/**/acceptance/*.spec.{ts,js}"
+        "command": "yarn playwright test apps/system-e2e/src/tests -c apps/system-e2e/src"
       }
     },
     "docker-cypress": {}
