formatting and linting

--- a/apps/system-e2e/project.json
+++ b/apps/system-e2e/project.json
@@ -16,8 +16,7 @@
         "outputPath": "dist/apps/system-e2e"
       },
       "configurations": {
-        "production": {
-        }
+        "production": {}
       }
     },
     "lint": {
