--- a/libs/application/templates/general-fishing-license/project.json
+++ b/libs/application/templates/general-fishing-license/project.json
@@ -19,7 +19,7 @@
       }
     },
     "schemas/codegen": {
-      "builer": "@nrwl/workspace:run-commands",
+      "builder": "@nrwl/workspace:run-commands",
       "options": {
         "command": "graphql-codegen --config libs/application/templates/general-fishing-license/codegen.yml"
       }
