--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "next-auth": "3.29.10",
     "next-cookies": "2.0.3",
     "node-fetch": "2.6.7",
+    "node-gyp": "9.1.0",
     "nodemailer": "6.7.2",
     "oidc-client-ts": "2.0.3",
     "openapi3-ts": "2.0.0",
