--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -81,6 +81,7 @@
 /libs/service-portal/settings/access-control                                                        @island-is/aranja
 /libs/clients/vmst/                                                                                 @island-is/aranja
 /libs/api/domains/directorate-of-labour/                                                            @island-is/aranja
+/libs/service-portal/access-control/delegations                                                     @island-is/aranja
 
 /apps/judicial-system/                                                                              @island-is/kolibri-justice-league
 /libs/judicial-system/                                                                              @island-is/kolibri-justice-league
