Install python, move .yarn folder into build container

--- a/scripts/ci/Dockerfile
+++ b/scripts/ci/Dockerfile
@@ -7,8 +7,9 @@ RUN apk add -U git
 WORKDIR /build
 
 # Adding and installing packages
-ADD package.json yarn.lock .yarn/cache/ ./
-RUN yarn set version berry
+ADD package.json yarn.lock .yarnrc.yml ./
+COPY .yarn/ ./.yarn
+RUN apk add --update --no-cache python3 build-base gcc && ln -sf /usr/bin/python3 /usr/bin/python
 RUN CI=true yarn install --immutable
 
 FROM deps as src
