--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "charts": "cd ./infra && yarn charts"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "3.1.3",
     "@apollo/gateway": "^2.1.1",
     "@apollo/subgraph": "^2.1.1",
     "@aws-sdk/client-sqs": "3.41.0",
@@ -116,7 +116,7 @@
     "agentkeepalive": "4.2.1",
     "amazon-s3-uri": "0.0.3",
     "apollo-cache-inmemory": "1.6.6",
-    "apollo-client": "2.6.10",
+    "apollo-client": "2.6.8",
     "apollo-datasource-rest": "0.9.2",
     "apollo-link": "1.2.14",
     "apollo-link-batch-http": "1.2.14",
