Remove carats in package versions

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "engines": {
     "npm": "please-use-yarn",
-    "node": "^18.8.0",
-    "yarn": "^3.2"
+    "node": "18.8.0",
+    "yarn": "3.2"
   },
   "repository": {
     "type": "git",
@@ -55,8 +55,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.3",
-    "@apollo/gateway": "^2.1.1",
-    "@apollo/subgraph": "^2.1.1",
+    "@apollo/gateway": "2.1.1",
+    "@apollo/subgraph": "2.1.1",
     "@aws-sdk/client-sqs": "3.41.0",
     "@aws-sdk/credential-provider-node": "3.49.0",
     "@contentful/forma-36-react-components": "3.78.4",
@@ -73,7 +73,7 @@
     "@hookform/error-message": "0.0.5",
     "@island.is/login": "1.2.1",
     "@island.is/regulations-tools": "0.7.8",
-    "@nestjs/apollo": "^10.1.0",
+    "@nestjs/apollo": "10.1.0",
     "@nestjs/axios": "0.0.7",
     "@nestjs/bull": "0.1.2",
     "@nestjs/common": "8.4.4",
@@ -102,7 +102,7 @@
     "@types/passport-jwt": "3.0.3",
     "@types/pdfkit": "0.11.2",
     "@types/pubsub-js": "1.8.1",
-    "@types/react-csv": "^1.1.1",
+    "@types/react-csv": "1.1.1",
     "@types/react-input-mask": "3.0.0",
     "@types/react-modal": "3.13.1",
     "@types/react-pdf": "5.0.9",
@@ -127,7 +127,7 @@
     "apollo-link-retry": "2.2.16",
     "apollo-server-cache-redis": "1.2.1",
     "apollo-server-env": "2.4.5",
-    "apollo-server-express": "^3.10.2",
+    "apollo-server-express": "3.10.2",
     "apollo-server-plugin-base": "0.9.0",
     "apollo-server-plugin-response-cache": "0.5.3",
     "aws-elasticsearch-connector": "9.0.0",
@@ -176,7 +176,7 @@
     "handlebars": "4.7.7",
     "hot-shots": "9.0.0",
     "http-cache-semantics": "4.1.0",
-    "http-proxy-middleware": "^2.0.6",
+    "http-proxy-middleware": "2.0.6",
     "hypher": "0.2.5",
     "identicon.js": "2.3.3",
     "intl": "1.2.5",
@@ -223,7 +223,7 @@
     "react-alice-carousel": "1.19.3",
     "react-animate-height": "2.0.21",
     "react-apollo": "3.1.5",
-    "react-csv": "^2.0.3",
+    "react-csv": "2.0.3",
     "react-datepicker": "3.1.3",
     "react-dom": "17.0.2",
     "react-dropzone": "11.0.3",
@@ -252,7 +252,7 @@
     "reflect-metadata": "0.1.13",
     "remark-parse": "9.0.0",
     "rosetta": "1.0.0",
-    "rxjs": "^7.0.0",
+    "rxjs": "7.0.0",
     "sequelize": "6.19.0",
     "sequelize-replace-enum-postgres": "1.5.0",
     "sequelize-typescript": "2.1.3",
@@ -275,7 +275,7 @@
     "tslib": "1.14.1",
     "unified": "9.2.0",
     "uuidv4": "6.0.8",
-    "whatwg-fetch": "^3.6.2",
+    "whatwg-fetch": "3.6.2",
     "winston": "3.7.2",
     "winston-cloudwatch": "3.1.1",
     "winston-transport": "4.5.0",
@@ -286,7 +286,7 @@
     "zod": "1.11.13"
   },
   "devDependencies": {
-    "@anatine/esbuild-decorators": "^0.2.4",
+    "@anatine/esbuild-decorators": "0.2.4",
     "@anatine/esbuildnx": "0.2.0",
     "@aws-sdk/client-ses": "3.145.0",
     "@aws-sdk/client-ssm": "3.49.0",
@@ -294,16 +294,16 @@
     "@babel/plugin-proposal-decorators": "7.18.2",
     "@babel/plugin-transform-runtime": "7.18.2",
     "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@gperdomor/nx-docker": "0.2.3",
-    "@graphql-codegen/cli": "^2.12.0",
-    "@graphql-codegen/fragment-matcher": "^3.3.1",
-    "@graphql-codegen/schema-ast": "^2.5.1",
-    "@graphql-codegen/typescript": "^2.7.3",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
-    "@graphql-codegen/typescript-resolvers": "^2.7.3",
+    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/fragment-matcher": "3.3.1",
+    "@graphql-codegen/schema-ast": "2.5.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@graphql-codegen/typescript-resolvers": "2.7.3",
     "@jeremybarbet/contentful-extension-scripts": "0.22.7",
     "@nestjs/schematics": "8.0.10",
     "@nestjs/testing": "8.4.4",
@@ -344,9 +344,9 @@
     "@types/cross-spawn": "6.0.2",
     "@types/crypto-js": "4.0.1",
     "@types/escape-html": "1.0.0",
-    "@types/express": "^4.17.14",
+    "@types/express": "4.17.14",
     "@types/folder-hash": "3.3.0",
-    "@types/graphql": "^14.5.0",
+    "@types/graphql": "14.5.0",
     "@types/http-cache-semantics": "4.0.1",
     "@types/identicon.js": "2.3.0",
     "@types/imap-simple": "4.2.5",
@@ -359,7 +359,7 @@
     "@types/lodash": "4.14.160",
     "@types/mailparser": "3.4.0",
     "@types/memoizee": "0.4.5",
-    "@types/node": "^18.7.18",
+    "@types/node": "18.7.18",
     "@types/opossum": "4.1.1",
     "@types/passport-local": "1.0.33",
     "@types/pg": "8.6.4",
@@ -390,7 +390,7 @@
     "cypress": "10.6.0",
     "cypress-file-upload": "5.0.8",
     "dotenv": "14.3.2",
-    "esbuild": "^0.15.7",
+    "esbuild": "0.15.7",
     "eslint": "8.12.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "8.1.0",
@@ -420,7 +420,7 @@
     "storybook-addon-designs": "6.2.1",
     "ts-dedent": "2.0.0",
     "ts-jest": "28.0.8",
-    "ts-morph": "^16.0.0",
+    "ts-morph": "16.0.0",
     "ts-node": "10.2.1",
     "type-fest": "1.1.3",
     "typescript": "4.4.2",
